Scrollbar fixes

--- a/src/components/messaging/create/DetailCreate.module.css
+++ b/src/components/messaging/create/DetailCreate.module.css
@@ -48,7 +48,8 @@
 
 .listWrapper {
 	flex-grow: 1;
-	overflow: scroll;
+	overflow-x: hidden;
+	overflow-y: scroll;
 	padding: 0 16px;
 }
 
